--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,36 +1736,9 @@
     "# remove multi index (columns)\n",
     "google_agg.columns = google_agg.columns.droplevel(0)\n",
     "\n",
-    "# review_missing_removed['Sentiment']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SpecificationError",
-     "evalue": "nested renamer is not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSpecificationError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-232-8e002853d177>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     }\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mgoogle_agg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreview_missing_removed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'App'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maggregations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/pandas/core/groupby/generic.py\u001b[0m in \u001b[0;36maggregate\u001b[0;34m(self, func, *args, **kwargs)\u001b[0m\n\u001b[1;32m    938\u001b[0m         \u001b[0mfunc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_maybe_mangle_lambdas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    939\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 940\u001b[0;31m         \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_aggregate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    941\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    942\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/pandas/core/base.py\u001b[0m in \u001b[0;36m_aggregate\u001b[0;34m(self, arg, *args, **kwargs)\u001b[0m\n\u001b[1;32m    349\u001b[0m                     \u001b[0;31m# {'ra' : { 'A' : 'mean' }}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 351\u001b[0;31m                         \u001b[0;32mraise\u001b[0m \u001b[0mSpecificationError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nested renamer is not supported\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    352\u001b[0m                     \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mABCSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    353\u001b[0m                         \u001b[0;32mraise\u001b[0m \u001b[0mSpecificationError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nested renamer is not supported\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSpecificationError\u001b[0m: nested renamer is not supported"
-     ]
-    }
-   ],
-   "source": [
-    "aggregations = {\n",
-    "    'Sentiment': {\n",
-    "        'Positive': (lambda x : positive_function(x)),       \n",
-    "        'Total': 'count' }\n",
-    "    }\n",
+    "google_agg.rename(columns={'<lambda_0>' : 'Positive', 'count' : 'Total' }, inplace=True)\n",
     "\n",
-    "google_agg = review_missing_removed.groupby('App').agg(aggregations)\n"
+    "# renaming columns"
    ]
   },
   {
@@ -1777,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1801,8 +1774,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>&lt;lambda_0&gt;</th>\n",
-       "      <th>count</th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>App</th>\n",
@@ -1841,16 +1814,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                                  <lambda_0>  count\n",
-       "App                                                \n",
-       "10 Best Foods for You                    162    194\n",
-       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室          31     40\n",
-       "11st                                      23     39\n",
-       "1800 Contacts - Lens Store                64     80\n",
-       "1LINE – One Line with One Touch           27     38"
+       "                                  Positive  Total\n",
+       "App                                              \n",
+       "10 Best Foods for You                  162    194\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40\n",
+       "11st                                    23     39\n",
+       "1800 Contacts - Lens Store              64     80\n",
+       "1LINE – One Line with One Touch         27     38"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,12 +1845,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.710526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive  Total  Positive Ratio\n",
+       "App                                                              \n",
+       "10 Best Foods for You                  162    194        0.835052\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40        0.775000\n",
+       "11st                                    23     39        0.589744\n",
+       "1800 Contacts - Lens Store              64     80        0.800000\n",
+       "1LINE – One Line with One Touch         27     38        0.710526"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "# I think none of the denominators are zero\n",
+    "\n",
+    "google_agg['Positive Ratio'] = np.where(google_agg['Total'] == 0, 1, google_agg['Positive']/google_agg['Total'])\n",
+    "\n",
+    "google_agg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google_agg['Positive Ratio'].isna().sum()"
    ]
   },
   {
@@ -1889,11 +1969,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_agg.drop(['Positive', 'Total'], axis=1, inplace=True)"
    ]
   },
   {
@@ -1907,11 +1989,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 259,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>0.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>0.710526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive Ratio\n",
+       "App                                             \n",
+       "10 Best Foods for You                   0.835052\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        0.775000\n",
+       "11st                                    0.589744\n",
+       "1800 Contacts - Lens Store              0.800000\n",
+       "1LINE – One Line with One Touch         0.710526"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_agg.head()"
    ]
   },
   {
@@ -1927,13 +2079,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "google = "
+    "google = google_missing_removed.join(google_agg, on='App', how='right')\n",
+    "\n",
+    "\n",
+    "google.reset_index(inplace=True)\n",
+    "google.drop('index', axis=1, inplace=True)"
    ]
   },
   {
@@ -1947,12 +2103,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Installs</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Content Rating</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Last Updated</th>\n",
+       "      <th>Current Ver</th>\n",
+       "      <th>Android Ver</th>\n",
+       "      <th>Price Numerical</th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>FAMILY</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>974.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Garden Coloring Book</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>13791.0</td>\n",
+       "      <td>1,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2017-09-20</td>\n",
+       "      <td>2.9.2</td>\n",
+       "      <td>3.0 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.711111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FlipaClip - Cartoon animation</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>194216.0</td>\n",
+       "      <td>5,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2018-08-03</td>\n",
+       "      <td>2.2.5</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Boys Photo Editor - Six Pack &amp; Men's Suit</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>100,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2018-03-20</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.605263</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         App        Category  Rating  \\\n",
+       "0                        Coloring book moana  ART_AND_DESIGN     3.9   \n",
+       "1                        Coloring book moana          FAMILY     3.9   \n",
+       "2                       Garden Coloring Book  ART_AND_DESIGN     4.4   \n",
+       "3              FlipaClip - Cartoon animation  ART_AND_DESIGN     4.3   \n",
+       "4  Boys Photo Editor - Six Pack & Men's Suit  ART_AND_DESIGN     4.1   \n",
+       "\n",
+       "    Reviews    Installs  Type Content Rating                     Genres  \\\n",
+       "0     967.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "1     974.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "2   13791.0  1,000,000+  Free       Everyone               Art & Design   \n",
+       "3  194216.0  5,000,000+  Free       Everyone               Art & Design   \n",
+       "4     654.0    100,000+  Free       Everyone               Art & Design   \n",
+       "\n",
+       "  Last Updated Current Ver   Android Ver  Price Numerical  Positive Ratio  \n",
+       "0   2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
+       "1   2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
+       "2   2017-09-20       2.9.2    3.0 and up              0.0        0.711111  \n",
+       "3   2018-08-03       2.2.5  4.0.3 and up              0.0        1.000000  \n",
+       "4   2018-03-20         1.1  4.0.3 and up              0.0        0.605263  "
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "\n",
+    "google.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
