--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -87,22 +87,22 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10841 entries, 0 to 10840\n",
       "Data columns (total 13 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   App             10841 non-null  object \n",
-      " 1   Category        10841 non-null  object \n",
-      " 2   Rating          9367 non-null   float64\n",
-      " 3   Reviews         10841 non-null  object \n",
-      " 4   Size            10841 non-null  object \n",
-      " 5   Installs        10841 non-null  object \n",
-      " 6   Type            10840 non-null  object \n",
-      " 7   Price           10841 non-null  object \n",
-      " 8   Content Rating  10840 non-null  object \n",
-      " 9   Genres          10841 non-null  object \n",
-      " 10  Last Updated    10841 non-null  object \n",
-      " 11  Current Ver     10833 non-null  object \n",
-      " 12  Android Ver     10838 non-null  object \n",
-      "dtypes: float64(1), object(12)\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   App              10841 non-null  object \n",
+      " 1   Category         10841 non-null  object \n",
+      " 2   Rating           9367 non-null   float64\n",
+      " 3   Reviews          10841 non-null  float64\n",
+      " 4   Installs         10841 non-null  object \n",
+      " 5   Type             10840 non-null  object \n",
+      " 6   Price            10841 non-null  object \n",
+      " 7   Content Rating   10840 non-null  object \n",
+      " 8   Genres           10841 non-null  object \n",
+      " 9   Last Updated     10841 non-null  object \n",
+      " 10  Current Ver      10833 non-null  object \n",
+      " 11  Android Ver      10838 non-null  object \n",
+      " 12  Reviews_numeric  10840 non-null  float64\n",
+      "dtypes: float64(3), object(10)\n",
       "memory usage: 1.1+ MB\n"
      ]
     }
@@ -2052,13 +2052,6 @@
    "source": [
     "google.head(4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
