--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -64,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play = pd.read_csv('C:\\\\Users\\\\msart\\\\Desktop\\\\IronHack\\Module_3\\\\lab-supervised-learning-feature-extraction\\\\data\\\\googleplaystore.csv')"
    ]
   },
   {
@@ -80,7 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.dtypes"
    ]
   },
   {
@@ -96,7 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.head()"
    ]
   },
   {
@@ -116,7 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play['Reviews_numeric'] = pd.to_numeric(google_play['Reviews'],errors='coerce')"
    ]
   },
   {
@@ -132,7 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play['Reviews_isnull'] = google_play['Reviews_numeric'].isnull()\n",
+    "google_play.head()"
    ]
   },
   {
@@ -152,7 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play[google_play['Reviews_isnull'] == True]"
    ]
   },
   {
@@ -190,10 +197,15 @@
     "    Returns:\n",
     "        The correct numeric value of the Reviews score.\n",
     "    \"\"\"\n",
+    "    if s[-1:] == 'M':\n",
+    "        return float(s[:1]) * 1000000\n",
+    "    else:\n",
+    "        return float(s)\n",
     "    return np.NaN\n",
     "\n",
     "test_string = '4.0M'\n",
     "\n",
+    "print(convert_string_to_numeric(test_string))\n",
     "convert_string_to_numeric(test_string) == 4000000"
    ]
   },
@@ -210,7 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play['Reviews'] = google_play['Reviews'].apply(convert_string_to_numeric)"
    ]
   },
   {
@@ -228,7 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here:\n",
+    "google_play[google_play['Reviews_isnull'] == True]"
    ]
   },
   {
@@ -244,7 +258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.dtypes"
    ]
   },
   {
@@ -262,7 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play['Size'].unique()"
    ]
   },
   {
@@ -282,7 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "len(google_play[google_play['Size'] == 'Varies with device'])/len(google_play)"
    ]
   },
   {
@@ -302,7 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.drop(columns='Size', axis=1, inplace=True)"
    ]
   },
   {
@@ -322,7 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.isna().sum()"
    ]
   },
   {
@@ -342,7 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "len(google_play[google_play['Rating'].isna()])/len(google_play"
    ]
   },
   {
@@ -368,7 +388,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed = google_play.dropna()\n",
+    "len(google_missing_removed)"
    ]
   },
   {
@@ -388,7 +410,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed['Last Updated'] = pd.to_datetime(google_missing_removed['Last Updated'])\n",
+    "google_missing_removed['Last Updated']"
    ]
   },
   {
@@ -406,7 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Price\"].unique()"
    ]
   },
   {
@@ -426,7 +451,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Price Numerical\"] = google_missing_removed[\"Price\"].str.replace('$','')"
    ]
   },
   {
@@ -442,7 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Price Numerical\"] = pd.to_numeric(google_missing_removed['Price Numerical'],errors='coerce')"
    ]
   },
   {
@@ -458,7 +485,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed.drop(columns='Price',inplace=True)\n",
+    "google_missing_removed.head()"
    ]
   },
   {
@@ -478,7 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "google_missing_removed.dtypes"
    ]
   },
   {
@@ -500,9 +530,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -751,7 +779,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -765,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
